get all files and get all folders
